--- a/webapp/src/main/webapp/static/X-admin/css/login.css
+++ b/webapp/src/main/webapp/static/X-admin/css/login.css
@@ -9,15 +9,14 @@
      background:url(../images/bg.png) no-repeat center;
     background-size: cover;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .login{
-    margin: 120px auto 0 auto;
-    min-height: 420px;
-    max-width: 420px;
+    width: 420px;
     padding: 40px;
     background-color: #ffffff;
-    margin-left: auto;
-    margin-right: auto;
     border-radius: 4px;
     /* overflow-x: hidden; */
     box-sizing: border-box;
