可可项目20201217->投票

--- a/webapp/src/main/webapp/static/X-admin/css/xadmin.css
+++ b/webapp/src/main/webapp/static/X-admin/css/xadmin.css
@@ -31,6 +31,10 @@ body{
     border-color: #189f92!important;
 }
 
+.layui-table-view .layui-form-radio>i{
+    margin-top: 14px;
+}
+
 .layui-pop-search {
     cursor: pointer
 }
